# qpystructs

./: .gitignore  README.md  ci.py  copier.yaml  json-flat.xlsx  mkdocs.yml  pyproject copy.toml  pyproject.toml
.github/workflows/: build.yml
allure-results/: 04bd2265-3815-46c9-af29-5fe15106bff3-result.json  24a25e41-82ba-4cb5-b32e-91dab7bd913a-result.json  2764e029-1b76-419b-8138-4b3f20088a00-result.json  31fd2102-41aa-476a-978e-a838b14ee4b4-result.json  33291c1d-d9db-44c1-8c0d-136058fdd1f1-result.json  3a1e7a29-3655-48ce-a1f2-c76b2fd0de3e-result.json  43219e11-8c46-48b8-87e5-a211566f6f1f-result.json  7f80dbf6-d267-44a8-8725-65cc48123de1-result.json  8425bec3-8397-4b00-98b0-88e71f35e057-result.json  90da4e59-f168-4263-ae61-e7fbba9b2456-result.json  96d2fbb4-fdad-4ae1-ac95-722c964c61d9-result.json  9d5d21e7-26f1-432d-8c53-7fa4b1544526-result.json  a501b50e-a49a-4c0c-b801-65922aa51de3-result.json  c40066c4-4fe2-4e07-abc8-23bd70d6abb4-result.json  c4365b7f-d905-46e8-8028-ef8196f48a82-result.json  eb95a3f3-9c8a-4de6-b5f5-1f2fc0c9cbf2-result.json  f56e8c3e-ad5e-4403-a569-4407001adb6b-result.json  fa44568b-c25b-4682-acb7-748481ca4a8f-result.json
docs/: index.md
docs/pandas/: quickstart.md
docs/pdm/: 0-setup.md  1-dependencies.md  2-pdm-script.md  git-tags.md
docs/quickstart/: excel-one-page.md  json_one_page_revisited.md  structed-data.md
src/qpystructs/: __init__.py  dicttools.py  dotty.py  models.py  operations.py
template/: README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/src/{{module_name}}/: __init__.py
template/src/{{module_name}}/config/: __init__.py
tests/: conftest.py  json-flat.xlsx  merged_cell.xlsx  model_for_test.py  test_dicttools.py  test_exceltools.py  test_models.py  test_operations.py  tmp-json.xlsx  tmp.json  tmp.xlsx
tests/helper/: data_constants.py  demo_models.py
tests/structured-data/: camel-alias.json  example.json  json-array.json  unit.csv
